--- a/.helix/languages.toml
+++ b/.helix/languages.toml
@@ -1,5 +1,5 @@
 [language-server.silos]
-command = "/home/h/Public/silos-lsp-experiment/target/debug/silos-lsp-experiment"
+command = "./target/debug/silos-lsp-experiment"
 
 [[language]]
 name = "go"
